Changes in version 0.2.0.6-alpha - 2007-??-??

  o Minor bugfixes (bridges):
    - Do not intermix bridge routers with controller-added routers. (Bugfix
      on 0.2.0.x)

  o Minor bugfixes (network):
    - Do not fail with an assert when accept() returns an unexpected address
      family.  Addresses but does not wholly fix bug 483. (Bugfix on 0.2.0.x)

Changes in version 0.2.0.5-alpha - 2007-08-19
  o Removed features:
    - Version 1 directories are no longer generated in full. Instead,
      authorities generate and serve "stub" v1 directories that list
      no servers. This will stop Tor versions 0.1.0.x and earlier from
      working, but (for security reasons) nobody should be running those
      versions anyway.

  o Major bugfixes (compilation, 0.2.0.x):
    - Try to fix Win32 compilation again: improve checking for IPv6 types.
    - Try to fix MSVC compilation: build correctly on platforms that do
      not define s6_addr16 or s6_addr32.
    - Fix compile on platforms without getaddrinfo: bug found by Li-Hui
      Zhou.

  o Major bugfixes (stream expiration):
    - Expire not-yet-successful application streams in all cases if
      they've been around longer than SocksTimeout. Right now there are
      some cases where the stream will live forever, demanding a new
      circuit every 15 seconds. Bugfix on 0.1.2.7-alpha; fixes bug 454;
      reported by lodger.

  o Minor features (directory servers):
    - When somebody requests a list of statuses or servers, and we have
      none of those, return a 404 rather than an empty 200.

  o Minor features (directory voting):
    - Store v3 consensus status consensuses on disk, and reload them
      on startup.

  o Minor features (security):
    - Warn about unsafe ControlPort configurations.
    - Refuse to start with certain directory authority keys, and
      encourage people using them to stop.

  o Minor features (controller):
    - Add a PROTOCOLINFO controller command. Like AUTHENTICATE, it