@@ -1,5 +1,4 @@
 Changes in version 0.2.0.6-alpha - 2007-??-??
-
   o Minor bugfixes (bridges):
     - Do not intermix bridge routers with controller-added routers. (Bugfix
       on 0.2.0.x)
@@ -7,6 +6,12 @@ Changes in version 0.2.0.6-alpha - 2007-??-??
   o Minor bugfixes (network):
     - Do not fail with an assert when accept() returns an unexpected address
       family.  Addresses but does not wholly fix bug 483. (Bugfix on 0.2.0.x)
+
+  o Minor bugfixes (misc):
+    - Let directory authorities startup even when they can't generate
+      a descriptor immediately, e.g. because they don't know their
+      address.
+
 
 Changes in version 0.2.0.5-alpha - 2007-08-19
   o Removed features:
